# kiv-zos

./: .gitignore
c01/: doc.md  nakup.txt
c01/ukazka_semestralky_stare/: StruktFS23.txt
opakovani/: nakup.txt  vystup.txt
p02/: doc.md  fork  fork.c  fork_exp.c  fork_wait.c  res.txt
semestralka/: .gitignore  CMakeLists.txt  auto_build.bash  auto_valgrind.bash  autobuildrun.bash  dap_config.lua  main.cpp
semestralka/.cache/clangd/index/: CommandManager.cpp.B1282A04D2D6DB63.idx  CommandManager.hpp.5A827C90E06FEBFE.idx  CpCommand.cpp.7511692FE44B7E7F.idx  ExitCommand.cpp.DEE93406BF37CB0F.idx  ICommand.hpp.6E0EBE42342C02A9.idx  commands.hpp.603FAF10A50E7D1D.idx  main.cpp.B80160DD28BD3616.idx
semestralka/auto/: archive.bash  build.bash  config.bash  hex.bash  run.bash  valgrind.bash
semestralka/commands/: AddCommand.cpp  CatCommand.cpp  CdCommand.cpp  CommandManager.cpp  CommandManager.hpp  CpCommand.cpp  ExitCommand.cpp  FormatCommand.cpp  HelpCommand.cpp  ICommand.hpp  IncpCommand.cpp  InfoCommand.cpp  LoadCommand.cpp  LsCommand.cpp  MkdirCommand.cpp  MvCommand.cpp  OutcpCommand.cpp  PwdCommand.cpp  RmCommand.cpp  RmdirCommand.cpp  StatfsCommand.cpp  XcpCommand.cpp  commands.hpp
semestralka/doc/src/: build.sh  doc.tex  fasthesis.cls
semestralka/fs/: filesystem.hpp
semestralka/include/: CommandManager.hpp  ICommand.hpp  commands.hpp  errors.hpp  filesystem.hpp  structures.hpp
semestralka/src/: main.cpp
semestralka/src/commands/: AddCommand.cpp  CatCommand.cpp  CdCommand.cpp  CommandManager.cpp  CpCommand.cpp  ExecCommand.cpp  ExitCommand.cpp  FormatCommand.cpp  HelpCommand.cpp  IncpCommand.cpp  InfoCommand.cpp  LoadCommand.cpp  LsCommand.cpp  MkdirCommand.cpp  MvCommand.cpp  OutcpCommand.cpp  PwdCommand.cpp  RmCommand.cpp  RmdirCommand.cpp  StatfsCommand.cpp  XcpCommand.cpp
semestralka/src/core/: structures.cpp
semestralka/src/filesystem/: base.cpp  cluster.cpp  dir.cpp  file.cpp  format.cpp  inode.cpp  path.cpp
semestralka/src/fs/: filesystem.cpp  fs_cluster.cpp  fs_format.cpp  fs_inode.cpp  structures.cpp
semestralka/test/: add  boundaries  dir  format  format.txt  full_test.txt  huge  io  large  load  load2  mv  rm  xcp
ukazka_semestralky_stare/example_v02/: CMakeLists.txt  main.c
